--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1,8 +1,8 @@
 <li><a href="{{ site.js }}" class="otherLinkColour">JavaScript</a>
     <ul>
         {%- if page.url contains '/javascript/' or page.url contains '/javascript-v' -%}
-        <li><a href="{{ site.js }}user-guide/" class="otherLinkColour">User Guide</a>
-            {%- if page.url contains '-v8.2.3' or page.url contains '-v7.6' -%}
+        <li><a style="cursor:pointer;color:#3c3c3c">User Guide</a>
+            {%- if page.url contains '-v7.5' or page.url contains '-v7.6' -%}
             <ul>
                 <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
                 <li><a href="{{ site.js }}user-guide/basic-customizations.html" class="otherLinkColour">Basic Customizations</a></li>
@@ -14,62 +14,53 @@
             {%- else -%}
             <ul>
                 <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
-                <li><a href="{{ site.js }}user-guide/advanced-customizations.html" class="otherLinkColour">Advanced Usage</a></li>
+                <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
                 <li><a href="{{ site.js }}user-guide/upgrade.html" class="otherLinkColour">Upgrade</a></li>
             </ul>
-            {%- endif -%}   
+            {%- endif -%}
         </li>
         <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
+            {%- if page.url contains '-v7.5' or page.url contains '-v7.6' -%}
             <ul>
-                <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader</a></li>
-                <li><a href="{{ site.js_api }}BarcodeScanner.html" class="otherLinkColour">BarcodeScanner</a></li>
-                <li><a style="cursor:pointer;color:#3c3c3c">interface</a>
+                <li><a href="{{ site.js_api }}BarcodeReader/" class="otherLinkColour">BarcodeReader</a>
                     <ul>
-                        <li><a href="{{ site.js_api }}interface/LocalizationResult.html" class="otherLinkColour">LocalizationResult</a></li>
-                        <li><a href="{{ site.js_api }}interface/RegionDefinition.html" class="otherLinkColour">RegionDefinition</a></li>
-                        <li><a href="{{ site.js_api }}interface/RuntimeSettings.html" class="otherLinkColour">RuntimeSettings</a></li>
-                        <li><a href="{{ site.js_api }}interface/ScannerPlayCallbackInfo.html" class="otherLinkColour">ScannerPlayCallbackInfo</a></li>
-                        <li><a href="{{ site.js_api }}interface/ScanSettings.html" class="otherLinkColour">ScanSettings</a></li>
-                        <li><a href="{{ site.js_api }}interface/TextResult.html" class="otherLinkColour">TextResult</a></li>
-                        <li><a href="{{ site.js_api }}interface/VideoDeviceInfo.html" class="otherLinkColour">VideoDeviceInfo</a></li>
+                        <li><a href="{{ site.js_api }}BarcodeReader/methods/" class="otherLinkColour">Methods</a>
+                            <ul>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/initialize-and-destroy.html" class="otherLinkColour">Initialization and Destroy</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/decode.html" class="otherLinkColour">Decode Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/results.html" class="otherLinkColour">Result Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/parameter-and-runtime-settings.html" class="otherLinkColour">Parameter and Runtime Settings Methods</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ site.js_api }}BarcodeReader/properties.html" class="otherLinkColour">Properties</a></li>
                     </ul>
                 </li>
-                <li><a style="cursor:pointer;color:#3c3c3c">enum</a>
+                <li><a href="{{ site.js_api }}BarcodeScanner/" class="otherLinkColour">BarcodeScanner</a>
                     <ul>
-                        <li><a href="{{ site.js_api }}enum/EnumBarcodeColourMode.html" class="otherLinkColour">EnumBarcodeColourMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumBarcodeComplementMode.html" class="otherLinkColour">EnumBarcodeComplementMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumBarcodeFormat_2.html" class="otherLinkColour">EnumBarcodeFormat_2</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumBarcodeFormat.html" class="otherLinkColour">EnumBarcodeFormat</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumBinarizationMode.html" class="otherLinkColour">EnumBinarizationMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumClarityCalculationMethod.html" class="otherLinkColour">EnumClarityCalculationMethod</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumClarityFilterMode.html" class="otherLinkColour">EnumClarityFilterMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumColourClusteringMode.html" class="otherLinkColour">EnumColourClusteringMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumColourConversionMode.html" class="otherLinkColour">EnumColourConversionMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumConflictMode.html" class="otherLinkColour">EnumConflictMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumDeblurMode.html" class="otherLinkColour">EnumDeblurMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumDeformationResistingMode.html" class="otherLinkColour">EnumDeformationResistingMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumDPMCodeReadingMode.html" class="otherLinkColour">EnumDPMCodeReadingMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumErrorCode.html" class="otherLinkColour">EnumErrorCode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumGrayscaleTransformationMode.html" class="otherLinkColour">EnumGrayscaleTransformationMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumImagePixelFormat.html" class="otherLinkColour">EnumImagePixelFormat</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumImagePreprocessingMode.html" class="otherLinkColour">EnumImagePreprocessingMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumIMResultDataType.html" class="otherLinkColour">EnumIMResultDataType</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumIntermediateResultSavingMode.html" class="otherLinkColour">EnumIntermediateResultSavingMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumIntermediateResultType.html" class="otherLinkColour">EnumIntermediateResultType</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumLocalizationMode.html" class="otherLinkColour">EnumLocalizationMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumPDFReadingMode.html" class="otherLinkColour">EnumPDFReadingMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumQRCodeErrorCorrectionLevel.html" class="otherLinkColour">EnumQRCodeErrorCorrectionLevel</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumRegionPredetectionMode.html" class="otherLinkColour">EnumRegionPredetectionMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumResultCoordinateType.html" class="otherLinkColour">EnumResultCoordinateType</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumResultType.html" class="otherLinkColour">EnumResultType</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumScaleUpMode.html" class="otherLinkColour">EnumScaleUpMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumTerminatePhase.html" class="otherLinkColour">EnumTerminatePhase</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumTextFilterMode.html" class="otherLinkColour">EnumTextFilterMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumTextResultOrderMode.html" class="otherLinkColour">EnumTextResultOrderMode</a></li>
-                        <li><a href="{{ site.js_api }}enum/EnumTextureDetectionMode.html" class="EnumTextureDetectionMode">EnumTextureDetectionMode</a></li>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/methods/" class="otherLinkColour">Methods</a>
+                            <ul>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/initialize-and-destroy.html" class="otherLinkColour">Initialization and Destroy</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/camera-controls.html" class="otherLinkColour">Camera Control Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/capture-settings.html" class="otherLinkColour">Capture Settings</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/runtime-settings.html" class="otherLinkColour">Runtime Settings Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/inherited.html" class="otherLinkColour">Inherited Methods from `BarcodeReader`</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/properties.html" class="otherLinkColour">Properties</a></li>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/interfaces.html" class="otherLinkColour">Interfaces</a></li>
                     </ul>
                 </li>
+                <li><a href="{{ site.js_api }}global-interfaces.html" class="otherLinkColour">Global Interfaces</a></li>
             </ul>
+            {%- else -%}
+            <ul>
+                <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader for Images</a></li>
+                <li><a href="{{ site.js_api }}BarcodeScanner.html" class="otherLinkColour">BarcodeScanner for Video</a></li>
+                <li><a href="{{ site.js_api }}LicenseControl.html" class="otherLinkColour">License Control</a></li>
+                <li><a href="{{ site.js_api }}InitializationControl.html" class="otherLinkColour">Initialization Control</a></li>
+                <li><a href="{{ site.js_api }}InterfacesEnums.html" class="otherLinkColour">Interfaces and Enums</a></li>
+            </ul>
+            {%- endif -%}
         </li>
 
         <li><a href="{{ site.js_release_notes }}" class="otherLinkColour">Release Notes</a>
