--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -58,7 +58,50 @@
                 <li><a href="{{ site.js_api }}BarcodeScanner.html" class="otherLinkColour">BarcodeScanner for Video</a></li>
                 <li><a href="{{ site.js_api }}LicenseControl.html" class="otherLinkColour">License Control</a></li>
                 <li><a href="{{ site.js_api }}InitializationControl.html" class="otherLinkColour">Initialization Control</a></li>
-                <li><a href="{{ site.js_api }}InterfacesEnums.html" class="otherLinkColour">Interfaces and Enums</a></li>
+                <li><a href="{{ site.js_api }}InterfacesEnums.html" class="otherLinkColour">Interfaces and Enums</a>
+                    <ul>
+                        <li><a href="{{ site.js_api }}interface/LocalizationResult.html" class="otherLinkColour">LocalizationResult</a></li>
+                        <li><a href="{{ site.js_api }}interface/RegionDefinition.html" class="otherLinkColour">RegionDefinition</a></li>
+                        <li><a href="{{ site.js_api }}interface/RuntimeSettings.html" class="otherLinkColour">RuntimeSettings</a></li>
+                        <li><a href="{{ site.js_api }}interface/ScannerPlayCallbackInfo.html" class="otherLinkColour">ScannerPlayCallbackInfo</a></li>
+                        <li><a href="{{ site.js_api }}interface/ScanSettings.html" class="otherLinkColour">ScanSettings</a></li>
+                        <li><a href="{{ site.js_api }}interface/TextResult.html" class="otherLinkColour">TextResult</a></li>
+                        <li><a href="{{ site.js_api }}interface/VideoDeviceInfo.html" class="otherLinkColour">VideoDeviceInfo</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="{{ site.js_api }}enum/EnumBarcodeColourMode.html" class="otherLinkColour">EnumBarcodeColourMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumBarcodeComplementMode.html" class="otherLinkColour">EnumBarcodeComplementMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumBarcodeFormat_2.html" class="otherLinkColour">EnumBarcodeFormat_2</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumBarcodeFormat.html" class="otherLinkColour">EnumBarcodeFormat</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumBinarizationMode.html" class="otherLinkColour">EnumBinarizationMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumClarityCalculationMethod.html" class="otherLinkColour">EnumClarityCalculationMethod</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumClarityFilterMode.html" class="otherLinkColour">EnumClarityFilterMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumColourClusteringMode.html" class="otherLinkColour">EnumColourClusteringMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumColourConversionMode.html" class="otherLinkColour">EnumColourConversionMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumConflictMode.html" class="otherLinkColour">EnumConflictMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumDeblurMode.html" class="otherLinkColour">EnumDeblurMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumDeformationResistingMode.html" class="otherLinkColour">EnumDeformationResistingMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumDPMCodeReadingMode.html" class="otherLinkColour">EnumDPMCodeReadingMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumErrorCode.html" class="otherLinkColour">EnumErrorCode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumGrayscaleTransformationMode.html" class="otherLinkColour">EnumGrayscaleTransformationMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumImagePixelFormat.html" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumImagePreprocessingMode.html" class="otherLinkColour">EnumImagePreprocessingMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumIMResultDataType.html" class="otherLinkColour">EnumIMResultDataType</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumIntermediateResultSavingMode.html" class="otherLinkColour">EnumIntermediateResultSavingMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumIntermediateResultType.html" class="otherLinkColour">EnumIntermediateResultType</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumLocalizationMode.html" class="otherLinkColour">EnumLocalizationMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumPDFReadingMode.html" class="otherLinkColour">EnumPDFReadingMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumQRCodeErrorCorrectionLevel.html" class="otherLinkColour">EnumQRCodeErrorCorrectionLevel</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumRegionPredetectionMode.html" class="otherLinkColour">EnumRegionPredetectionMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumResultCoordinateType.html" class="otherLinkColour">EnumResultCoordinateType</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumResultType.html" class="otherLinkColour">EnumResultType</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumScaleUpMode.html" class="otherLinkColour">EnumScaleUpMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumTerminatePhase.html" class="otherLinkColour">EnumTerminatePhase</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumTextFilterMode.html" class="otherLinkColour">EnumTextFilterMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumTextResultOrderMode.html" class="otherLinkColour">EnumTextResultOrderMode</a></li>
+                        <li><a href="{{ site.js_api }}enum/EnumTextureDetectionMode.html" class="EnumTextureDetectionMode">EnumTextureDetectionMode</a></li>
+                    </ul>
+                </li>
             </ul>
             {%- endif -%}
         </li>
