add samples in menu

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -119,7 +119,8 @@
         </li>
         {%- if page.url contains '-v7.' or page.url contains '-v8.0' or page.url contains '-v8.1' or page.url contains '-v8.2' -%}
         {%- else -%}
-        <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Guide</a></li>
+        <li><a href="https://dynamsoft.github.io/dbr-browser-samples/index.html" class="otherLinkColour">Online Samples</a></li>
+        <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a></li>
         {%- endif -%}
         {%- endif -%}
     </ul>
