--- a/_includes/sidelist-programming/programming-javascript-v8.2.html
+++ b/_includes/sidelist-programming/programming-javascript-v8.2.html
@@ -1,12 +1,65 @@
 <li><a href="{{ site.js }}" class="otherLinkColour">JavaScript</a>
     <ul>
+        {%- if page.url contains '/javascript/' or page.url contains '/javascript-v' -%}
         <li><a style="cursor:pointer;color:#3c3c3c">User Guide</a>
+            {%- if page.url contains '-v7.' -%}
+            <ul>
+                <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
+                <li><a href="{{ site.js }}user-guide/basic-customizations.html" class="otherLinkColour">Basic Customizations</a></li>
+                <li><a href="{{ site.js }}user-guide/advanced-customizations.html" class="otherLinkColour">Advanced Customizations</a></li>
+                <li><a href="{{ site.js }}user-guide/deployment-activation.html" class="otherLinkColour">Deployment Activation</a></li>
+                <li><a href="{{ site.js }}user-guide/features-requirements.html" class="otherLinkColour">Features Requirements</a></li>
+                <li><a href="{{ site.js }}user-guide/upgrade.html" class="otherLinkColour">Upgrade</a></li>
+            </ul>
+            {%- else -%}
+            {%- if page.url contains '-v8.0' or page.url contains '-v8.1' or page.url contains '-v8.2'  -%}
+            <ul>
+                <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
+                <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
+                <li><a href="{{ site.js }}user-guide/upgrade.html" class="otherLinkColour">Upgrade</a></li>
+            </ul>
+            {%- else -%}
             <ul>
                 <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
                 <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
             </ul>
+            {%- endif -%}
+            {%- endif -%}
         </li>
         <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
+            {%- if page.url contains '-v7.' -%}
+            <ul>
+                <li><a href="{{ site.js_api }}BarcodeReader/" class="otherLinkColour">BarcodeReader</a>
+                    <ul>
+                        <li><a href="{{ site.js_api }}BarcodeReader/methods/" class="otherLinkColour">Methods</a>
+                            <ul>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/initialize-and-destroy.html" class="otherLinkColour">Initialization and Destroy</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/decode.html" class="otherLinkColour">Decode Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/results.html" class="otherLinkColour">Result Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeReader/methods/parameter-and-runtime-settings.html" class="otherLinkColour">Parameter and Runtime Settings Methods</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ site.js_api }}BarcodeReader/properties.html" class="otherLinkColour">Properties</a></li>
+                    </ul>
+                </li>
+                <li><a href="{{ site.js_api }}BarcodeScanner/" class="otherLinkColour">BarcodeScanner</a>
+                    <ul>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/methods/" class="otherLinkColour">Methods</a>
+                            <ul>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/initialize-and-destroy.html" class="otherLinkColour">Initialization and Destroy</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/camera-controls.html" class="otherLinkColour">Camera Control Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/capture-settings.html" class="otherLinkColour">Capture Settings</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/runtime-settings.html" class="otherLinkColour">Runtime Settings Methods</a></li>
+                                <li><a href="{{ site.js_api }}BarcodeScanner/methods/inherited.html" class="otherLinkColour">Inherited Methods from `BarcodeReader`</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/properties.html" class="otherLinkColour">Properties</a></li>
+                        <li><a href="{{ site.js_api }}BarcodeScanner/interfaces.html" class="otherLinkColour">Interfaces</a></li>
+                    </ul>
+                </li>
+                <li><a href="{{ site.js_api }}global-interfaces.html" class="otherLinkColour">Global Interfaces</a></li>
+            </ul>
+            {%- else -%}
             <ul>
                 <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader for Images</a></li>
                 <li><a href="{{ site.js_api }}BarcodeScanner.html" class="otherLinkColour">BarcodeScanner for Video</a></li>
@@ -55,6 +108,7 @@
                     </ul>
                 </li>
             </ul>
+            {%- endif -%}
         </li>
 
         <li><a href="{{ site.js_release_notes }}" class="otherLinkColour">Release Notes</a>
@@ -63,7 +117,11 @@
                 <li><a href="{{ site.js_release_notes }}js-7.html" class="otherLinkColour">Version 7.6 and below</a></li>
             </ul>
         </li>
+        {%- if page.url contains '-v7.' or page.url contains '-v8.0' or page.url contains '-v8.1' or page.url contains '-v8.2' -%}
+        {%- else -%}
         <li><a href="{{ site.js }}sample-index.html" class="otherLinkColour">Online Samples</a></li>
         <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a></li>
+        {%- endif -%}
+        {%- endif -%}
     </ul>
 </li>
