--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -6,6 +6,7 @@
                 <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
             </ul>
         </li>
+        <li><a href="{{ site.js }}sample-index.html" class="otherLinkColour">Demo and Samples</a></li>
         <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader for Images</a></li>
@@ -63,7 +64,6 @@
                 <li><a href="{{ site.js_release_notes }}js-7.html" class="otherLinkColour">Version 7.6 and below</a></li>
             </ul>
         </li>
-        <li><a href="{{ site.js }}sample-index.html" class="otherLinkColour">Online Samples</a></li>
         <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a></li>
     </ul>
 </li>
