add info on dbrjs- angular sample

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -6,7 +6,7 @@
                 <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
             </ul>
         </li>
-        <li><a href="{{ site.js }}sample-index.html" class="otherLinkColour">Demo and Samples</a></li>
+        <li><a href="{{ site.js }}samples-demos/index.html" class="otherLinkColour">Demo and Samples</a></li>
         <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader for Images</a></li>
