hello world samples explainted

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -6,7 +6,19 @@
                 <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a></li>
             </ul>
         </li>
-        <li><a href="{{ site.js }}samples-demos/index.html" class="otherLinkColour">Demo and Samples</a></li>
+        <li><a href="{{ site.js }}samples-demos/index.html" class="otherLinkColour">Samples and Demos</a>
+            <ul>
+                <li>Hello World
+                    <ul>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-minCode.html" class="otherLinkColour">Simplest Implementation</a></li>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-readFile.html" class="otherLinkColour">Read an Existing Image</a></li>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-angular.html" class="otherLinkColour">Hello World in Angular</a></li>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-reactjs.html" class="otherLinkColour">Hello World in React</a></li>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-vuejs.html" class="otherLinkColour">Hello World in Vue</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
         <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.js_api }}BarcodeReader.html" class="otherLinkColour">BarcodeReader for Images</a></li>
