--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a style="cursor:pointer;color:#3c3c3c">Hello World</a>
                     <ul>
-                        <li><a href="{{ site.js }}samples-demos/helloworld-minCode.html" class="otherLinkColour">Minimal code</a></li>
+                        <li><a href="{{ site.js }}samples-demos/helloworld-minCode.html" class="otherLinkColour">Minimal Code</a></li>
                         <li><a href="{{ site.js }}samples-demos/helloworld-readFile.html" class="otherLinkColour">Read an Image</a></li>
                         <li><a href="{{ site.js }}samples-demos/helloworld-angular.html" class="otherLinkColour">Hello World in Angular</a></li>
                         <li><a href="{{ site.js }}samples-demos/helloworld-reactjs.html" class="otherLinkColour">Hello World in React</a></li>
