--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -27,24 +27,36 @@
                 <li><a style="cursor:pointer;color:#3c3c3c">UI
                         Customization</a>
                     <ul>
-                        <li><a href="{{ site.js }}samples-demos/ui-customization.html" class="otherLinkColour"></a></li>
-                        <li><a href="{{ site.js }}samples-demos/ui-customization.html" class="otherLinkColour"></a></li>
-                        <li><a href="{{ site.js }}samples-demos/ui-customization.html" class="otherLinkColour"></a></li>
-                        <li><a href="{{ site.js }}samples-demos/ui-customization.html" class="otherLinkColour"></a></li>
-                        <li><a href="{{ site.js }}samples-demos/ui-customization.html" class="otherLinkColour"></a></li>
+                        <li><a href="{{ site.js }}samples-demos/ui-customization.html#default-gui"
+                                class="otherLinkColour">Use the
+                                Default Camera UI</a></li>
+                        <li><a href="{{ site.js }}samples-demos/ui-customization.html#hide-built-in-controllers"
+                                class="otherLinkColour">Hide
+                                Built-in Controllers</a></li>
+                        <li><a href="{{ site.js }}samples-demos/ui-customization.html#use-external-controllers"
+                                class="otherLinkColour">Use
+                                External Controllers</a></li>
+                        <li><a href="{{ site.js }}samples-demos/ui-customization.html#enlarge-the-video-stream"
+                                class="otherLinkColour">Enlarge
+                                the Video Stream</a></li>
                     </ul>
                 </li>
-                <li><a>Parameter Settings</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">Parameter Settings</a>
                     <ul>
-                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html" class="otherLinkColour"></a>
+                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html#specify-the-barcode-types-and-number-of-barcodes-per-image"
+                                class="otherLinkColour">Barcode Types and Count</a>
                         </li>
-                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html" class="otherLinkColour"></a>
+                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html#set-localization-and-binarization-modes"
+                                class="otherLinkColour">Localization and Binarization</a>
                         </li>
-                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html" class="otherLinkColour"></a>
+                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html#set-deblur-modes-and-scale-up-modes"
+                                class="otherLinkColour">Deblur Modes and Scale-up Modes</a>
                         </li>
-                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html" class="otherLinkColour"></a>
+                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html#deformation-resisting-modes-and-barcode-complement-modes"
+                                class="otherLinkColour">Deformation Resisting and Barcode Complementing</a>
                         </li>
-                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html" class="otherLinkColour"></a>
+                        <li><a href="{{ site.js }}samples-demos/parameter-settings.html#define-or-detect-the-region-of-interest"
+                                class="otherLinkColour">Define or Detect the Region of Interest</a>
                         </li>
                     </ul>
                 </li>
