finished sample guides

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -31,54 +31,15 @@
                                                                 World in Vue</a></li>
                                         </ul>
                                 </li>
-                                <li><a style="cursor:pointer;color:#3c3c3c">UI
+                                <li><a href="{{ site.js }}samples-demos/ui-customization.html"
+                                                style="cursor:pointer;color:#3c3c3c">UI
                                                 Customization</a>
-                                        <ul>
-                                                <li><a href="{{ site.js }}samples-demos/ui-customization.html#default-gui"
-                                                                class="otherLinkColour">Use the
-                                                                Default Camera UI</a></li>
-                                                <li><a href="{{ site.js }}samples-demos/ui-customization.html#hide-built-in-controllers"
-                                                                class="otherLinkColour">Hide
-                                                                Built-in Controllers</a></li>
-                                                <li><a href="{{ site.js }}samples-demos/ui-customization.html#use-external-controllers"
-                                                                class="otherLinkColour">Use
-                                                                External Controllers</a></li>
-                                                <li><a href="{{ site.js }}samples-demos/ui-customization.html#enlarge-the-video-stream"
-                                                                class="otherLinkColour">Enlarge
-                                                                the Video Stream</a></li>
-                                        </ul>
                                 </li>
-                                <li><a style="cursor:pointer;color:#3c3c3c">Parameter Settings</a>
-                                        <ul>
-                                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html#specify-the-barcode-types-and-number-of-barcodes-per-image"
-                                                                class="otherLinkColour">Barcode Types and Count</a>
-                                                </li>
-                                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html#set-localization-and-binarization-modes"
-                                                                class="otherLinkColour">Localization and
-                                                                Binarization</a>
-                                                </li>
-                                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html#set-deblur-modes-and-scale-up-modes"
-                                                                class="otherLinkColour">Deblur and Scale-up
-                                                        </a>
-                                                </li>
-                                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html#deformation-resisting-modes-and-barcode-complement-modes"
-                                                                class="otherLinkColour">Deformed and
-                                                                Incomplete Barcodes</a>
-                                                </li>
-                                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html#define-or-detect-the-region-of-interest"
-                                                                class="otherLinkColour">Define or Detect the ROI</a>
-                                                </li>
-                                        </ul>
+                                <li><a href="{{ site.js }}samples-demos/parameter-settings.html"
+                                                style="cursor:pointer;color:#3c3c3c">Parameter Settings</a>
                                 </li>
-                                <li><a style="cursor:pointer;color:#3c3c3c">Use Cases</a>
-                                        <ul>
-                                                <li><a href="{{ site.js }}samples-demos/use-cases.html?ver=latest#read-barcodes-and-fill-form-fields"
-                                                                class="otherLinkColour">Fill Form Fields</a>
-                                                </li>
-                                                <li><a href="{{ site.js }}samples-demos/use-cases.html?ver=latest#read-the-pdf417-barcode-on-the-drivers-license"
-                                                                class="otherLinkColour">Read a Driver's License</a>
-                                                </li>
-                                        </ul>
+                                <li><a href="{{ site.js }}samples-demos/use-cases.html"
+                                                style="cursor:pointer;color:#3c3c3c">Use Cases</a>
                                 </li>
                         </ul>
                 </li>
