--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -41,6 +41,9 @@
                                 <li><a href="{{ site.js }}samples-demos/use-cases.html"
                                                 style="cursor:pointer;color:#3c3c3c">Use Cases</a>
                                 </li>
+                                <li><a href="https://demo.dynamsoft.com/barcode-reader-js/"
+                                                style="cursor:pointer;color:#3c3c3c">Official Demo</a>
+                                </li>
                         </ul>
                 </li>
                 <li><a href="{{ site.js_api }}" class="otherLinkColour">API Reference</a>
