--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -41,8 +41,8 @@
                                 <li><a href="{{ site.js }}samples-demos/use-cases.html"
                                                 style="cursor:pointer;color:#3c3c3c">Use Cases</a>
                                 </li>
-                                <li><a href="https://demo.dynamsoft.com/barcode-reader-js/"
-                                                style="cursor:pointer;color:#3c3c3c">Official Demo</a>
+                                <li><a target="_blank" href="https://demo.dynamsoft.com/barcode-reader-js/"
+                                                style="cursor:pointer;color:#3c3c3c">Main Demo</a>
                                 </li>
                         </ul>
                 </li>
