--- a/_includes/sidelist-programming/programming-javascript-v7.6.html
+++ b/_includes/sidelist-programming/programming-javascript-v7.6.html
@@ -1,6 +1,6 @@
 <li><a href="{{ site.js }}" class="otherLinkColour">JavaScript</a>
     <ul>
-        <li><a style="cursor:pointer;color:#3c3c3c">User Guide</a>
+        <li><a href="{{ site.js }}user-guide/index.html" style="cursor:pointer;color:#3c3c3c">User Guide</a>
             <ul>
                 <li><a href="{{ site.js }}user-guide/#getting-started---hello-world" class="otherLinkColour">Getting Started</a></li>
                 <li><a href="{{ site.js }}user-guide/basic-customizations.html" class="otherLinkColour">Basic Customizations</a></li>
