--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -190,8 +190,10 @@
 
                 <li><a href="{{ site.js_release_notes }}" class="otherLinkColour">Release Notes</a>
                         <ul>
+                                <li><a href="{{ site.js_release_notes }}js-9.html" class="otherLinkColour">Version
+                                                9.x</a></li>
                                 <li><a href="{{ site.js_release_notes }}js-8.html" class="otherLinkColour">Version
-                                                8.x</a></li>
+                                                                8.x</a></li>
                                 <li><a href="{{ site.js_release_notes }}js-7.html" class="otherLinkColour">Version 7.6
                                                 and below</a>
                                 </li>
