--- a/_includes/sidelist-programming/programming-javascript-v8.2.5.html
+++ b/_includes/sidelist-programming/programming-javascript-v8.2.5.html
@@ -16,7 +16,7 @@
                 <li><a href="{{ site.js_api }}InterfacesEnums.html" class="otherLinkColour">Interfaces and Enums</a>
                     <ul>
                         <li><a href="{{ site.js_api }}interface/LocalizationResult.html" class="otherLinkColour">LocalizationResult</a></li>
-                        <li><a href="{{ site.js_api }}interface/RegionDefinition.html" class="otherLinkColour">RegionDefinition</a></li>
+                        <li><a href="{{ site.js_api }}interface/Region.html" class="otherLinkColour">Region</a></li>
                         <li><a href="{{ site.js_api }}interface/RuntimeSettings.html" class="otherLinkColour">RuntimeSettings</a></li>
                         <li><a href="{{ site.js_api }}interface/ScannerPlayCallbackInfo.html" class="otherLinkColour">ScannerPlayCallbackInfo</a></li>
                         <li><a href="{{ site.js_api }}interface/ScanSettings.html" class="otherLinkColour">ScanSettings</a></li>
