--- a/_includes/sidelist-programming/programming-javascript-v8.8.7.html
+++ b/_includes/sidelist-programming/programming-javascript-v8.8.7.html
@@ -94,8 +94,8 @@
                                         <ul>
                                                 <li><a href="{{ site.js_api }}interface/LocalizationResult.html"
                                                                 class="otherLinkColour">LocalizationResult</a></li>
-                                                <li><a href="{{ site.js_api }}interface/RegionDefinition.html"
-                                                                class="otherLinkColour">RegionDefinition</a></li>
+                                                <li><a href="{{ site.js_api }}interface/Region.html"
+                                                                class="otherLinkColour">Region</a></li>
                                                 <li><a href="{{ site.js_api }}interface/RuntimeSettings.html"
                                                                 class="otherLinkColour">RuntimeSettings</a></li>
                                                 <li><a href="{{ site.js_api }}interface/ScannerPlayCallbackInfo.html"
