rearrange topics for features

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -8,32 +8,29 @@
 
         <li><a href="{{ site.js }}user-guide/explore-features/index.html" class="otherLinkColour">Explore Features</a>
             <ul>
+                <li><a class="otherLinkColour">Basic Features</a>
+                    <ul>
+                        <li><a href="{{ site.features }}barcode-formats-and-count.html?lang=js" class="otherLinkColour">Specify barcode formats and count</a></li>
+                        <li><a href="{{ site.features }}barcode-scan-region.html?lang=js" class="otherLinkColour">Read a specific area/region</a></li>
+                        <li><a href="{{ site.features }}customize-the-ui.html?lang=js" class="otherLinkColour">Customize the UI</a></li>
+                    </ul>
+                </li>
                 <li><a class="otherLinkColour">Handle Different Cases</a>
                     <ul>
                         <li><a href="{{ site.features }}read-inverted-barcodes.html?lang=js" class="otherLinkColour">Read inverted barcodes</a></li>
                         <li><a href="{{ site.features }}read-deformed-barcodes.html?lang=js" class="otherLinkColour">Read deformed barcodes</a></li>
                         <li><a href="{{ site.features }}read-incomplete-barcodes.html?lang=js" class="otherLinkColour">Read incomplete barcodes</a></li>
-                        <!--<li><a href="{{ site.features }}read-dense-barcodes.html?lang=js" class="otherLinkColour">Read dense barcodes</a></li>-->
+                        <li><a href="{{ site.features }}read-dense-barcodes.html?lang=js" class="otherLinkColour">Read dense barcodes</a></li>
                         <li><a href="{{ site.features }}read-a-large-image.html?lang=js" class="otherLinkColour">Read barcodes from a large image</a></li>
                         <li><a href="{{ site.features }}read-barcodes-with-small-modulesize.html?lang=js" class="otherLinkColour">Read barcodes with small module size</a></li>
                         <li><a href="{{ site.features }}read-barcodes-with-imbalanced-colour.html?lang=js" class="otherLinkColour">Read images with imbalanced colors</a></li>
                         <li><a href="{{ site.features }}read-barcodes-with-uneven-lighting.html?lang=js" class="otherLinkColour">Read images with uneven lighting</a></li>
                         <li><a href="{{ site.features }}read-images-with-texture.html?lang=js" class="otherLinkColour">Read images with texture</a></li>
                         <li><a href="{{ site.features }}read-images-with-lots-of-text.html?lang=js" class="otherLinkColour">Read images with lots of text</a></li>
-                    </ul>
-                </li>
-                <li><a class="otherLinkColour">Control The Process</a>
-                    <ul>
-                        <li><a href="{{ site.features }}customize-the-ui.html?lang=js" class="otherLinkColour">Customize the UI</a></li>
-                        <li><a href="{{ site.features }}barcode-formats-and-count.html?lang=js" class="otherLinkColour">Specify barcode formats and count</a></li>
-                        <li><a href="{{ site.features }}barcode-scan-region.html?lang=js" class="otherLinkColour">Read a specific area/region</a></li>
                         <li><a href="{{ site.features }}preprocess-images.html?lang=js" class="otherLinkColour">Preprocess images to read difficult barcodes</a></li>
-                        <li><a href="{{ site.features }}control-terminate-phase.html?lang=js" class="otherLinkColour">Control when to terminate a decoding process</a></li>
-                        <li><a href="{{ site.features }}use-runtimesettings-or-templates.html?lang=js" class="otherLinkColour">Use RuntimeSettings or Templates</a></li>
-                        <li><a href="{{ site.features }}use-format-specific-configuration.html?lang=js" class="otherLinkColour">Use format specific configurations</a></li>
                     </ul>
                 </li>
-                <li><a class="otherLinkColour">Other Topics</a>
+                <li><a class="otherLinkColour">Barcode Results</a>
                     <ul>
                         <li><a href="{{ site.features }}get-confidence-rotation.html?lang=js" class="otherLinkColour">Get barcode confidence and rotation</a></li>
                         <li><a href="{{ site.features }}get-detailed-info.html?lang=js" class="otherLinkColour">Get detailed barcode information</a></li>
@@ -41,12 +38,19 @@
                         <li><a href="{{ site.features }}use-intermidiate-results.html?lang=js" class="otherLinkColour">Use intermediate results</a></li>
                     </ul>
                 </li>
+                <li><a class="otherLinkColour">Advanced Features</a>
+                    <ul>
+                        <li><a href="{{ site.features }}control-terminate-phase.html?lang=js" class="otherLinkColour">Control when to terminate a decoding process</a></li>
+                        <li><a href="{{ site.features }}use-runtimesettings-or-templates.html?lang=js" class="otherLinkColour">Use RuntimeSettings or Templates</a></li>
+                        <li><a href="{{ site.features }}use-format-specific-configuration.html?lang=js" class="otherLinkColour">Use format specific configurations</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="{{ site.js }}user-guide/use-cases/index.html" class="otherLinkColour">Check Use Cases</a>
             <ul>
                 <li><a href="{{ site.usecases }}scan-barcodes-as-input.html?lang=js" class="otherLinkColour">Scan barcodes as input</a></li>
-              <!--  <li><a href="{{ site.usecases }}search-with-barcode.html?lang=js" class="otherLinkColour">Search an item with barcode</a></li>-->
+                <!--  <li><a href="{{ site.usecases }}search-with-barcode.html?lang=js" class="otherLinkColour">Search an item with barcode</a></li>-->
                 <li><a href="{{ site.usecases }}scan-and-parse-AAMVA.html?lang=js" class="otherLinkColour">Scan and parse PDF417 on AAMVA documents</a></li>
                 <li><a href="{{ site.usecases }}read-dpm-codes.html?lang=js" class="otherLinkColour">Read DPM codes</a></li>
                 <li><a href="{{ site.usecases }}read-postal-codes.html?lang=js" class="otherLinkColour">Read Postal codes</a></li>
