hide unwritten docs

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -57,8 +57,8 @@
                 <li><a href="{{ site.usecases }}read-multipage-files.html?lang=js" class="otherLinkColour">Process multi-page TIF or PDF files</a></li>
             </ul>
         </li>
-        <li><a href="{{ site.js }}user-guide/optimize-performance.html" class="otherLinkColour">Optimize Performance</a></li>
-        <li><a href="{{ site.js }}user-guide/debug.html" class="otherLinkColour">Debug</a></li>
+         <!--  <li><a href="{{ site.js }}user-guide/optimize-performance.html" class="otherLinkColour">Optimize Performance</a></li>
+        <li><a href="{{ site.js }}user-guide/debug.html" class="otherLinkColour">Debug</a></li>-->
     </ul>
 </li>
 <li><a href="{{ site.js }}samples-demos/index.html" class="otherLinkColour">Samples and Demos</a>
