--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{{ site.js }}" class="otherLinkColour">DBRJS Introduction</a>
+    <a href="{{ site.js }}" class="otherLinkColour">DBR-JS Introduction</a>
 </li>
 <li class="category">DEVELOPMENT</li>
 <li><a href="{{ site.js }}user-guide/default.html">User Guide</a>
@@ -54,7 +54,7 @@
                 <li><a href="{{ site.usecases }}scan-and-parse-AAMVA.html?lang=js" class="otherLinkColour">Scan and parse PDF417 on AAMVA documents</a></li>
                 <li><a href="{{ site.usecases }}read-dpm-codes.html?lang=js" class="otherLinkColour">Read DPM codes</a></li>
                 <li><a href="{{ site.usecases }}read-postal-codes.html?lang=js" class="otherLinkColour">Read Postal codes</a></li>
-                <li><a href="{{ site.usecases }}read-multipage-files.html?lang=js" class="otherLinkColour">Process multi-page TIF or PDF files</a></li>
+                <!--  <li><a href="{{ site.usecases }}read-multipage-files.html?lang=js" class="otherLinkColour">Process multi-page TIF or PDF files</a></li>-->
             </ul>
         </li>
          <!--  <li><a href="{{ site.js }}user-guide/optimize-performance.html" class="otherLinkColour">Optimize Performance</a></li>
