--- a/_includes/sidelist-programming/programming-javascript-v8.1.0.html
+++ b/_includes/sidelist-programming/programming-javascript-v8.1.0.html
@@ -45,6 +45,7 @@
         <li><a href="{{ site.js_api }}global-interfaces.html" class="otherLinkColour">Global Interfaces</a></li>
     </ul>
 </li>
+<li class="category">USEFUL RESOURCES</li>
 <li><a href="{{ site.js_release_notes }}" class="otherLinkColour">Release Notes</a>
     <ul>
         <li><a href="{{ site.js_release_notes }}js-8.html" class="otherLinkColour">Version 8.x</a></li>
