fix issues found by 20220729

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -200,4 +200,4 @@
 <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a></li>
 <li><a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a></li>
 <li class="category">OTHERS</li>
-<li><a target="_blank" href="{{ site.introduction }}" class="otherLinkColour refreshLink">Not using JavaScript</a></li>
+<li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
