try fixing page refreshing

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -201,3 +201,5 @@
 <li><a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a></li>
 <li class="category">OTHERS</li>
 <li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
+<li><a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of (Dynamsoft Barcode Reader) Dbr JS deployable files (source code, etc.) ?</a></li>
+<li hidden><a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html">How to use the JavaScript SDK in offline mode?</a></li>
