test link & refresh

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -202,4 +202,4 @@
 <li class="category">OTHERS</li>
 <li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
 <li><a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of (Dynamsoft Barcode Reader) Dbr JS deployable files (source code, etc.) ?</a></li>
-<li hidden><a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html">How to use the JavaScript SDK in offline mode?</a></li>
+<li hidden><a href="https://officecn.dynamsoft.com:808/barcode-reader/docs/web/programming/javascript/faq/javascript-sdk-offline-mode-use.html?ver=latest">How to use the JavaScript SDK in offline mode?</a></li>
